WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314271
[libpas] Fix race in `pas_bitfit_directory_take_last_empty`
https://bugs.webkit.org/show_bug.cgi?id=314271
Summary
[libpas] Fix race in `pas_bitfit_directory_take_last_empty`
Sosuke Suzuki
Reported
2026-05-06 18:09:24 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-05-06 18:25:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64428
EWS
Comment 2
2026-05-07 15:24:02 PDT
Committed
312830@main
(6e299de4c1ae): <
https://commits.webkit.org/312830@main
> Reviewed commits have been landed. Closing PR #64428 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-07 15:24:23 PDT
<
rdar://problem/176500505
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug