Source/bmalloc/libpas/src/test/BitfitTests.cpp
@@ -29,9 +29,15 @@
 
 #include "iso_heap.h"
 #include "iso_heap_innards.h"
+#include "pas_bitfit_directory.h"
 #include "pas_bitfit_heap.h"
 #include "pas_bitfit_size_class.h"
+#include "pas_deferred_decommit_log.h"
 #include "pas_heap.h"
+#include "pas_race_test_hooks.h"
+#include "pas_scavenger.h"
+#include "pas_versioned_field.h"
+#include <functional>
 #include <vector>
 
 using namespace std;
@@ -154,6 +160,75 @@ void testAllocateAlignedSmallerThanSizeClassAndSmallerThanLargestAvailable(
     assertSizeClasses(fillerObjectSize, firstSize);
 }
 
+#if PAS_ENABLE_TESTING
+function<void(pas_race_test_hook_kind)> hookCallback;
+
+void hookCallbackAdapter(pas_race_test_hook_kind kind)
+{
+    hookCallback(kind);
+}
+
+class InstallBitfitRaceHook : public TestScope {
+public:
+    InstallBitfitRaceHook()
+        : TestScope(
+            "install-bitfit-race-hook",
+            [] () {
+                pas_race_test_hook_callback_instance = hookCallbackAdapter;
+            })
+    {
+    }
+};
+
+void testTakeLastEmptyLastEmptyPlusOneWatchRace()
+{
+    pas_scavenger_suspend();
+
+    void* obj = iso_allocate_common_primitive(1056, pas_non_compact_allocation_mode);
+    CHECK(obj);
+
+    pas_bitfit_heap* bitfitHeap = pas_compact_atomic_bitfit_heap_ptr_load_non_null(
+        &iso_common_primitive_heap.segregated_heap.bitfit_heap);
+    pas_bitfit_directory* directory = nullptr;
+    pas_bitfit_page_config_variant variant;
+    for (PAS_EACH_BITFIT_PAGE_CONFIG_VARIANT_ASCENDING(variant)) {
+        pas_bitfit_directory* candidate = pas_bitfit_heap_get_directory(bitfitHeap, variant);
+        if (pas_bitfit_directory_size(candidate)) {
+            directory = candidate;
+            break;
+        }
+    }
+    CHECK(directory);
+    CHECK_GREATER_EQUAL(pas_bitfit_directory_size(directory), 1u);
+
+    pas_bitfit_directory_set_empty_bit_at_index(directory, 0, false);
+    directory->last_empty_plus_one = pas_versioned_field_create(1, 0);
+
+    hookCallback =
+        [directory] (pas_race_test_hook_kind kind) {
+            if (kind != pas_race_test_hook_bitfit_directory_take_last_empty_after_loop)
+                return;
+            pas_bitfit_directory_view_did_become_empty_at_index(directory, 0);
+        };
+
+    pas_deferred_decommit_log log;
+    pas_deferred_decommit_log_construct(&log, nullptr, 0, nullptr);
+    pas_page_sharing_pool_take_result result =
+        pas_bitfit_directory_take_last_empty(directory, &log, pas_lock_is_not_held);
+    pas_deferred_decommit_log_destruct(&log, pas_lock_is_not_held);
+
+    hookCallback = nullptr;
+
+    CHECK_EQUAL(result, pas_page_sharing_pool_take_none_available);
+
+    // The hook re-reported view[0] as empty after the scan but before the final try_write.
+    // If take_last_empty's read of last_empty_plus_one isn't watched, the hook's maximize()
+    // is a no-op, the try_write succeeds, and the directory ends with last_empty_plus_one == 0
+    // while empty_bits[0] is set: a permanently stranded page.
+    CHECK_EQUAL(directory->last_empty_plus_one.value, static_cast<uintptr_t>(1));
+}
+#endif // PAS_ENABLE_TESTING
+
 } // anonymous namespace
 
 #endif // PAS_ENABLE_ISO
@@ -162,8 +237,12 @@ void addBitfitTests()
 {
 #if PAS_ENABLE_ISO
     ForceBitfit forceBitfit;
-    
+
     ADD_TEST(testAllocateAlignedSmallerThanSizeClassAndSmallerThanLargestAvailable(
                  1056, 100, 0, 16, 1024, 100));
+#if PAS_ENABLE_TESTING
+    InstallBitfitRaceHook installBitfitRaceHook;
+    ADD_TEST(testTakeLastEmptyLastEmptyPlusOneWatchRace());
+#endif
 #endif // PAS_ENABLE_ISO
 }
